# Zero

./: .gitignore  Cargo.toml  README.md  audit.toml  audit.txt  audit2.txt  audit3.txt  audit_err.txt  audit_full.txt  audit_json.txt  audit_out.txt  build_err.txt  cargo_clean.txt  check_err.txt  clippy.txt  commits_exact.txt  compile.txt  comprehensive_test_run.txt  comprehensive_test_run_2.txt  comprehensive_test_run_3.txt  crypto_errors_2.txt  dht_errors_2.txt  error.txt  error_x3dh.txt  final2.txt  final3.txt  final4.txt  final_results.txt  final_results_v2.txt  final_test.txt  final_test_report.txt  final_verification.txt  final_zft.txt  fix_err.txt  handshake_err.txt  handshake_errors_1.txt  handshake_fix.txt  ide_refresh.txt  identity_errors_1.txt  identity_errors_2.txt  (+47 more)
.github/workflows/: security.yml
Docs/: ZERO_Protocol_Complete_Documentation.docx  ZERO_Protocol_Complete_Documentation.txt  aTox_Deep_Research_v2.docx  aTox_Deep_Research_v2.txt  aTox_Research.docx  aTox_Research.txt
kem_probe/: Cargo.toml
kem_probe/src/: lib.rs
zero-crypto/: Cargo.toml  check_results.json  errors.txt  errors_clean.txt
zero-crypto/src/: aead.rs  cbor.rs  dh.rs  dh_test.rs  error.rs  hash.rs  kdf.rs  kem.rs  lib.rs  sign.rs
zero-crypto/tests/: crypto_comprehensive.rs
zero-dht/: Cargo.toml
zero-dht/src/: error.rs  kbucket.rs  lib.rs  mdns.rs  node_record.rs  onion.rs  packets.rs  routing_table.rs
zero-dht/tests/: dht_comprehensive.rs
zero-groups/: Cargo.toml
zero-groups/src/: error.rs  group.rs  lib.rs  member.rs
zero-groups/tests/: group_tests.rs
zero-handshake/: Cargo.toml
zero-handshake/src/: ephemeral_pool.rs  error.rs  lib.rs  master_secret.rs  noise.rs  x3dh.rs
zero-handshake/tests/: handshake_comprehensive.rs
zero-identity/: Cargo.toml
zero-identity/src/: bundle.rs  encoding.rs  error.rs  keypair.rs  lib.rs  prekey.rs  zeroid.rs
zero-protocol/: Cargo.toml  build.rs
zero-protocol/src/: api.rs  discovery.rs  error.rs  lib.rs  nat.rs  persistence.rs  zav.rs  zero.udl  zft.rs
zero-protocol/tests/: benchmark_comparison.rs  comprehensive_test.rs  e2e_offline_zsf.rs  protocol_fuzz_v1.rs  protocol_test_v1.rs  scaling_test_v1.rs
zero-ratchet/: Cargo.toml
zero-ratchet/src/: error.rs  header.rs  lib.rs  skipped_keys.rs  state.rs
zero-ratchet/tests/: ratchet_comprehensive.rs
zero-relay/: Cargo.toml
zero-relay/src/: error.rs  lib.rs  protocol.rs  server.rs
zero-store-forward/: Cargo.toml
zero-store-forward/src/: envelope.rs  error.rs  lib.rs  pow.rs
zero-transport/: Cargo.toml
zero-transport/src/: error.rs  lib.rs  nat.rs  quic.rs  tcp_tls.rs
zero-transport/tests/: quic_loopback_wire.rs  tcp_tls_loopback_wire.rs
zero-wire/: Cargo.toml
zero-wire/src/: aad.rs  error.rs  header.rs  lib.rs  replay.rs  types.rs
zero-wire/tests/: wire_comprehensive.rs
