[package]
name        = "zero-crypto"
description = "ZERO Protocol — Cryptographic primitives layer"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
ed25519-dalek    = { workspace = true }
x25519-dalek     = { workspace = true }
ml-kem           = { workspace = true }
chacha20poly1305 = { workspace = true }
blake2           = { workspace = true }
hkdf             = { workspace = true }
hmac             = { workspace = true }
sha2             = { workspace = true }
argon2           = { workspace = true }
rand             = { workspace = true }
rand_core        = { workspace = true }
serde_bytes      = { workspace = true }
zeroize          = { workspace = true }
subtle           = { workspace = true }
curve25519-dalek = { version = "4.1" }
serde            = { workspace = true }
ciborium         = { workspace = true }
thiserror        = { workspace = true }
hex              = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
