[package]
name        = "zero-protocol"
description = "ZERO Protocol — Top-level orchestration and UniFFI bindings"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
zero-crypto        = { path = "../zero-crypto" }
zero-identity      = { path = "../zero-identity" }
zero-handshake     = { path = "../zero-handshake" }
zero-ratchet       = { path = "../zero-ratchet" }
zero-dht           = { path = "../zero-dht" }
zero-transport     = { path = "../zero-transport" }
zero-relay         = { path = "../zero-relay" }
zero-store-forward = { path = "../zero-store-forward" }
zero-groups        = { path = "../zero-groups" }
uniffi             = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_cbor         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap            = { workspace = true }
mdns-sd            = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
bytes              = { workspace = true }
parking_lot        = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
