[package]
name        = "zero-relay"
description = "ZERO Protocol — TCP relay server (cannot read E2E encrypted content)"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
zero-crypto    = { path = "../zero-crypto" }
zero-identity  = { path = "../zero-identity" }
zero-transport = { path = "../zero-transport" }
tokio          = { workspace = true }
futures        = { workspace = true }
bytes          = { workspace = true }
serde          = { workspace = true }
dashmap        = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }
chrono         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
